--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <button>/</button>
     </div>
     <div class="btn">
-        <button>AC</button>
-        <button>del</button>
-        <button>%</button>
-        <button>/</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>*</button>
     </div>
     <div class="btn">
-        <button>AC</button>
-        <button>del</button>
-        <button>%</button>
-        <button>/</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>-</button>
     </div>
     <div class="btn">
-        <button>AC</button>
-        <button>del</button>
-        <button>%</button>
-        <button>/</button>
+        <button>00</button>
+        <button>0</button>
+        <button>.</button>
+        <button>+</button>
     </div>
 
 </body>
