--- a/index.html
+++ b/index.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
+
 <body>
     <div class="calculator">
         <input type="text" placeholder="0">
-    </div>
+    
 
-    <div class="btn">
-        <button>AC</button>
-        <button>del</button>
-        <button>%</button>
-        <button>/</button>
-    </div>
-    <div class="btn">
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>/</button>
-    </div>
-    <div class="btn">
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>*</button>
-    </div>
-    <div class="btn">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>-</button>
-    </div>
-    <div class="btn">
-        <button>00</button>
-        <button>0</button>
-        <button>.</button>
-        <button>+</button>
+        <div class="btn">
+            <button>AC</button>
+            <button>del</button>
+            <button>%</button>
+            <button>/</button>
+        </div>
+        <div class="btn">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>/</button>
+        </div>
+        <div class="btn">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>*</button>
+        </div>
+        <div class="btn">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>-</button>
+        </div>
+        <div class="btn">
+            <button>00</button>
+            <button>0</button>
+            <button>.</button>
+            <button>+</button>
+        </div>
+
     </div>
 
 </body>
+
 </html>
