--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
 
         <div class="btn">
             <button>AC</button>
-            <button>del</button>
+            <button>DEL</button>
             <button>%</button>
-            <button>/</button>
+            <button class="operator" >/</button>
         </div>
         <div class="btn">
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>/</button>
+            <button class="operator">*</button>
         </div>
         <div class="btn">
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>*</button>
+            <button class="operator" >-</button>
         </div>
         <div class="btn">
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>-</button>
+            <button class="operator">+</button>
         </div>
         <div class="btn">
             <button>00</button>
             <button>0</button>
             <button>.</button>
-            <button>+</button>
+            <button class="equal">=</button>
         </div>
 
     </div>
